--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-testing-library": "^5.9.1",
     "jest": "^29.6.2",
     "jest-environment-jsdom": "^29.6.2",
+    "jest-styled-components": "^7.1.1",
     "vite": "^4.4.5"
   }
 }
