--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.2",
+    "react-tooltip": "^5.20.0",
     "socket.io-client": "^4.7.1",
     "styled-components": "^6.0.5"
   },
